feat: Update dashboard layout, authentication, and kanban board

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,10 @@
-NEXT_PUBLIC_API_BASE_URL="http://localhost:4000"
+
+DATABASE_URL=mysql://root:root@localhost:3306/project_planner
+
+# NextAuth Configuration
+AUTH_SECRET="fEFGc7uPMvOLJURQVdanDBitO/D8ZRjj2PY6LNFybAE="
+NEXTAUTH_URL="http://localhost:3000"
+
+
+GOOGLE_CLIENT_ID=your-google-client-id-here.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret-here
