--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-devtools": "^5.51.23",
-    "argon2": "^0.44.0",
     "axios": "^1.7.5",
+    "bcryptjs": "^3.0.3",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -44,6 +44,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.0",
@@ -54,6 +55,7 @@
     "@prisma/client": "5.17.0",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@types/axios": "^0.9.36",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
