--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@headlessui/react": "^2.1.2",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -36,6 +37,7 @@
     "framer-motion": "^10.15.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.399.0",
+    "mermaid": "^11.12.1",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.30",
     "react": "^18",
