--- a/package.json
+++ b/package.json
@@ -38,21 +38,25 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.399.0",
     "mermaid": "^11.12.1",
+    "nanoid": "^5.1.6",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.30",
+    "perfect-freehand": "^1.2.2",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
+    "roughjs": "^4.6.6",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.0",
     "vaul": "^0.9.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@prisma/client": "5.17.0",
