--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nanoid": "^5.1.6",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.30",
+    "next-intl": "^4.5.5",
     "perfect-freehand": "^1.2.2",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
