--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -57,10 +57,10 @@
     "uuid": "^9.0.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "@prisma/client": "5.17.0"
   },
   "devDependencies": {
-    "@prisma/client": "5.17.0",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^3.0.0",
@@ -70,7 +70,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
-    "prisma": "5.17.0",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
